--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body{
      --text-color:hsl(0, 0%, 56%);
      --container-color-2:hsl(264, 100%, 97%);
      --shadow:6px 6px 10px -1px rgba(0,0,0,0.15),-6px -6px 10px -1px rgba(255,255,255,0.7);
+
+     --opacity:100%;
     
 
         --big-font-size:3rem;
@@ -70,6 +72,7 @@ body{
   --text-color:hsl(0, 0%, 76%);
   --box-color:hsl(200,12%,8%) ;
   --shadow:0px 0px 0px 0px rgba(0,0,0,0.15);
+  --opacity:30%;
   }
 
 
@@ -399,6 +402,8 @@ input[type='radio'],input[type='checkbox']{
     width: 100%;
     height: 80vh;
     border-radius: 5px;
+    opacity: var(--opacity);
+    filter: blur(2px) ;
   }
 
   .img-slider .slide .info{
@@ -407,6 +412,7 @@ input[type='radio'],input[type='checkbox']{
     margin-top:30vh;
     padding: 15px 30px;
     animation: info-transition 2s;
+    z-index: 900;
   }
   
 @keyframes info-transition{
@@ -524,8 +530,8 @@ input[type='radio'],input[type='checkbox']{
 }
 .what-i-do .creation{
   position: relative;
+  flex-basis: 150px;
   height: 150px;
-  width: 150px;
   background-color:var(--box-color);
   box-shadow: var(--shadow);
 }
@@ -890,6 +896,17 @@ input[type="checkbox"]{
   overflow: hidden;
   transition: max-height 0.5s, padding 0.5s;
 }
+
+.education-accordion li .content .year-persentage{
+display: flex;
+justify-content: space-between;
+padding-bottom: 1rem;
+}
+.education-accordion li .content .year-persentage h3{
+  font-size: var(--h3-font-size);
+  font-weight: var(--weight-300);
+  color:var(--first-color-dark);
+}
 .education-accordion input[type="checkbox"]:checked + label + .content{
   max-height: 400px;
   padding: 10px 10px 20px;
@@ -950,7 +967,6 @@ input[type="checkbox"]{
   border: 1px solid transparent;
   background-color: var(--box-color);
   font-size: var(--small-font-size);
-  color: var(--text-color);
   font-weight: var(--weight-300);
   
 }
@@ -972,11 +988,10 @@ input[type="checkbox"]{
   cursor: pointer;
   height: 30px;
   width: 150px;
-  
   justify-self: end;
   grid-column: span 2;
   background-color:var(--sub-title-color) ; 
-    color: var(--box-color);
+    color:#fff;
 }
 
 .contact-form .submit:hover{
